--- a/package.json
+++ b/package.json
@@ -9,6 +9,17 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
+  },
+  "dependencies": {
+    "boostrap": "^2.0.0",
+    "bootstrap": "^5.3.0",
+    "jquery": "^3.7.0",
+    "navigo": "^8.11.1",
+    "popper.js": "^1.16.1",
+    "uuid": "^9.0.0"
   }
 }
